[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-capture-audio"
dynamic = ["version"]
description = 'An audio scrapbook'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tapeloop", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "sounddevice",
  "soundfile",
  "keyboard",
  "pygame",
  "numpy",
  "scipy"
]

[project.scripts]
py-capture-audio  = "py_capture_audio.capture:handle_keys"

[project.urls]
Documentation = "https://github.com/tapeloop/py-capture-audio#readme"
Issues = "https://github.com/tapeloop/py-capture-audio/issues"
Source = "https://github.com/tapeloop/py-capture-audio"

[tool.hatch.version]
path = "src/py_capture_audio/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py_capture_audio tests}"

[tool.coverage.run]
source_pkgs = ["py_capture_audio", "tests"]
branch = true
parallel = true
omit = [
  "src/py_capture_audio/__about__.py",
]

[tool.coverage.paths]
py_capture_audio = ["src/py_capture_audio", "*/py-capture-audio/src/py_capture_audio"]
tests = ["tests", "*/py-capture-audio/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
